Fixed z-index of modal overlay.

--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -5,6 +5,7 @@
 	height: 100%;
 	top: 0;
 	left: 0;
+	z-index: 1001;
 }
 
 .pxl-modal
@@ -13,7 +14,7 @@
 	top: 50%;
 	left: 50%;
 	background-color: #FFF;
-	z-index: 1001;
+	z-index: 1002;
 
 	@include x-border-radius(3px);
 	@include x-box-shadow(0 0 12px rgba(0, 0, 0, .4));
